--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ ol {
 }
 .page2_message_1 {
   height: 50px;
+  text-align: center;
 }
 
 .page2_message_2 {
@@ -259,12 +260,11 @@ ol {
 .page2_message_3_1 {
   color: white;
   background-color: #0071BB;
-  margin: 3% 7%;
-  padding: 1% 3%;
+  margin: 40px 15%;
+  padding:0px 3%;
   text-align: center;
   border-radius: 60px;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
-  height: 60px;
 }
 
 ul {
@@ -272,18 +272,13 @@ ul {
 }
 
 .point-title {
-	margin: 0;
-	padding: 36px 0 36px 50px;
+	padding: 25px 0px 25px 100px;
 	list-style: none;
 	background-image: url(image/fin.png);
 	background-repeat: no-repeat;
 	background-size: 50px;
+	background-position: left center;
   font-size: 2rem;
-  transform: translateY(-30%);
-}
-
-.page2_message_3_1_1 {
-	transform: translateY(-40px);
 }
 
 .page2_message_3_image {
@@ -369,16 +364,11 @@ ul {
 .page2_message_4_1 {
   color: white;
   background-color: #0071BB;
-  margin: 3% 7%;
-  padding: 1% 3%;
+  margin: 40px 15%;
+  padding: 0px 3%;
   text-align: center;
   border-radius: 60px;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
-  height: 60px;
-}
-.page2_message_4_1_1{
-    font-size: 2rem;
-	    transform: translateY(-30px);
 }
 
 .page2_message_4_2 {
@@ -425,12 +415,11 @@ ul {
 .page2_message_4_5 {
   color: white;
   background-color: #0071BB;
-  margin: 3% 25%;
-  padding: 1% 3%;
+  margin: 40px 25%;
+  padding:0px 3%;
   text-align: center;
   border-radius: 60px;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
-	height: 60px;
 }
 
 .page3_message_box {
@@ -711,18 +700,13 @@ ul {
 }
 
 .page2_message_4_6{
-    color: white;
+color: white;
     background-color: #0071BB;
-    margin: 3% 10%;
-    padding: 1% 3%;
+    margin: 40px 15%;
+    padding: 0px 3%;
     text-align: center;
     border-radius: 60px;
     box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 50%);
-	height: 60px;
-}
-
-.video {
-	text-align: center;
 }
 
 .tr2 {
@@ -814,7 +798,7 @@ ul {
 }
 
 .yoyaku_box {
-	 width: 60%;
+	 width: 75%;
     margin: 80px auto;
     background: linear-gradient(-135deg ,#ff9090, #ff62d6);
     font-size: 2rem;
@@ -872,26 +856,34 @@ ul {
 	.page2_message_3_abusolute {
     top: 500px;
   }
+	
+	.page2_message_3_1 {
+    margin: 40px 5%;
+}
 
 	.page2_message_4 {
 		margin: 380px 0 200px 0;
 	}
 	
-	.page2_message_4_1 {
-    padding: 3% 3%;
-  }
 	
 	.page2_message_4_1_1 {
     transform: translateY(-45px);
    }
 	
-.page2_message_4_5 {
-    margin: 3% 20%;
-    margin-top:550px;
+  .page2_message_4_5 {
+    margin: 40px 15%;
+  }
+	
+	.page2_message_4_6 {
+    margin: 40px 10%;
+}
+	
+  .page2_message_10 {
+    margin-top: 600px;
   }
 	
 	.page3_message_title_sub {
-    margin: 50px 20%;
+    margin: 50px 10%;
 }
 	
   .page3_message_3_image{
@@ -900,6 +892,14 @@ ul {
 	
 	.page3_message_3__ {
 		font-size: 3.5rem;
+	}
+	
+	.page2_message_4_1 {
+    margin: 40px 5%;
+}
+	
+	.page6_message_1_exc {
+		padding-left: 5%
 	}
 	
   .page6_message_image1 {
@@ -916,12 +916,6 @@ ul {
 	
   .page6_message_image4 {
     left: 75%;
-  }
-	
-  .fix1 a {
-  }
-	
-  .fix2 a {
   }
 	
 .fix1 {
@@ -966,6 +960,10 @@ ul {
 	.google_map {
 		width: 100%;
 	}
+	
+	.point-title {
+    padding-left: 50px;
+  }
 	
 	.page1_message_1 {
     font-size: 1.2rem;
@@ -1069,11 +1067,8 @@ ul {
 	}
 	
 	.page2_message_3_1 {
-    margin: 3% 7%;
-    padding: 2% 3%;
+     margin: 40px 10%;
 }
-	
-	
 	
 	.page2_message_3_image {
 		width: 80%;
@@ -1104,9 +1099,12 @@ ul {
 		margin: 150px 0 0 0;
 	}
 	
+	.page2_message_4_1 {
+    margin: 40px 10%;
+}
+	
 	.page2_message_4_1_1 {
 	  font-size: 1rem;
-     transform: translateY(-10%);
 	  padding: 10px;
 	}
 
@@ -1128,16 +1126,8 @@ ul {
     margin-left: -20px;
   }
 	
-	ul {
-		margin-block-start: 0em;
-		margin-block-end: 0em;
-	}
-	
 	.point-title {
-    line-height: 25px;
-    transform: translateY(5px);
     font-size: 1.2rem;
-    padding: 10px 0 10px 30px;
     background-size: 30px;
 }
 	
@@ -1145,12 +1135,7 @@ ul {
     font-size: 1rem;
     margin: 80px 5% 0px;
     line-height: 20px;
-}
-	.page2_message_4_5 {
-		margin: 3% 5%;
-		height: 50px;
-	}
-	
+}	
 	
 	.page3_message_title {
     font-size: 1.5rem;
@@ -1167,7 +1152,7 @@ ul {
 	}
 
 	.page2_message_4_6 {
-	   margin: 8% 2% 4%;
+	   margin: 40px 10%;
 	}
 	
 	.page3_message_1 {
@@ -1210,8 +1195,7 @@ ul {
 }
 
 	.page3_message_title_sub {
-    margin: 30px 5%;
-    font-size: 1rem;
+    font-size: 1.5rem;
 	}
 
 	.page3_message_box {
@@ -1378,12 +1362,12 @@ ul {
 	.fix3 a {
     padding: 42px 0 0px 40%;
    }
+	
+	.yoyaku_box {
+		font-size: 1.2rem;
+	}
 }
 
-.yoyaku_box {
-    width: 75%;
-    font-size: 1.2rem;
-}
 
 
 
@@ -1515,8 +1499,7 @@ ul {
 	}
 	
 	.page2_message_3_1 {
-    margin: 3% 7%;
-    padding: 2% 3%;
+    margin: 40px 5%;
 }
 	
 	
@@ -1550,12 +1533,6 @@ ul {
 	.page2_message_4 {
 		margin: 150px 0 0 0;
 	}
-	
-	.page2_message_4_1_1 {
-	  font-size: 1rem;
-     transform: translateY(-10%);
-	  padding: 10px;
-	}
 
 	.page2_message_100 {
 	  margin: 350px 0 200px 0;
@@ -1576,16 +1553,12 @@ ul {
     margin-left: -20px;
   }
 	
-	ul {
-		margin-block-start: 0em;
-		margin-block-end: 0em;
-	}
-	
 	.point-title {
-    line-height: 25px;
     font-size: 0.8rem;
-    padding: 10px 0 10px 30px;
-    background-size: 30px;
+}
+	
+	.page2_message_4_1 {
+    margin: 40px 5%;
 }
 	
 	.page2_message_4_1_1 {
@@ -1598,8 +1571,7 @@ ul {
     line-height: 20px;
 }
 	.page2_message_4_5 {
-		margin: 3% 5%;
-		height: 50px;
+		margin: 40px 5%;
 	}
 	
 	
@@ -1725,6 +1697,10 @@ ul {
 	.page6_message_1 {
     font-size: 1rem;
     margin: 60px 20px 50px 80px;
+}
+	
+	.page6_message_1_exc {
+    padding-left: 0%;
 }
 	
 	.page6_message_1_end {
