リファクタリング等

--- a/style.css
+++ b/style.css
@@ -367,9 +367,7 @@ h2 {
 .page2_message_3_abusolute_1 {
   font-size: 1.7rem;
 }
-.page2_message_3_abusolute_2 {
-  color: #ff0;
-}
+
 
 .page2_message_4_1 {
   color: white;
@@ -418,7 +416,7 @@ h2 {
   left: 50%;
 }
 
-.page2_message_4_abusolute_1 {
+.yellow {
   color: #ffff00f5;
 }
 
@@ -506,6 +504,7 @@ h2 {
 }
 .page3_message_1 {
   font-size: 3.4rem;
+  padding-left: 5%;
 }
 .page3_message_1_1 {
   font-size: 3.4rem;
@@ -536,7 +535,7 @@ h2 {
 
 .page3_message_3_image{
   position: absolute;
-  left: 68%;
+  left: 70%;
   top: 0px;
 }
 
@@ -1311,6 +1310,7 @@ color: white;
 	
 	.page3_message_1 {
     font-size: 1.8rem;
+    padding-left: 2%;
   }
 
 	.page3_message_1_1 {
@@ -1530,6 +1530,11 @@ color: white;
 	.yoyaku_box {
 		font-size: 1.2rem;
 	}
+	
+	h2 {
+    font-size: 1.5rem;
+  }
+	
 }
 
 
@@ -1798,6 +1803,7 @@ color: white;
 	
 	.page3_message_1 {
     font-size: 1.2rem;
+    padding-left: 9%;
   }
 
 	.page3_message_1_1 {
@@ -1833,6 +1839,8 @@ color: white;
 	
 	.page3_message_6_title {
     font-size: 1.2rem;
+    text-decoration-thickness: 10px;
+    text-underline-offset: -10px;
 }
 
 	.page3_message_title_sub {
