--- a/style.css
+++ b/style.css
@@ -730,6 +730,10 @@ h2 {
   margin:60px 0 50px 15%;
 }
 
+.page6_message_1_exc{
+  padding-left: 8%;
+}
+
 .page6_message_1_end {
     font-size: 1.5rem;
     margin: 60px 0px 50px 15%;
